fix: header align-self property removed
Remove align-self property from header

--- a/blocks/header/header.scss
+++ b/blocks/header/header.scss
@@ -4,7 +4,6 @@
   width: 100%;
   padding: 28px 120px;
   align-self: flex-end;
-  box-sizing: border-box;
 
   /* rules for nav__links element */
   &__nav-links {
